[tool.poetry]
name = "keep"
version = "0.1.0"
description = "Alerting. for developers, by developers."
authors = ["Paladin Data inc."]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
pyyaml = "^6.0"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
pre-commit-hooks = "^4.4.0"
yamllint = "^1.29.0"
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
keep = "keep.cli.cli:cli"
