[tool.poetry]
name = "keep"
version = "0.1.0"
description = "Alerting. for developers, by developers."
authors = ["Paladin Data inc."]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
pyyaml = "^6.0"
requests = "^2.28.2"
snowflake-connector-python = "^3.0.0"
paramiko = "^3.0.0"
elasticsearch = "^8.6.1"
chevron = "^0.14.0"
python-dotenv = "^0.21.1"
pygithub = "^1.57"
sentry-sdk = "^1.15.0"
pydantic = "^1.10.4"
datefinder = "^0.7.3"
mysql-connector-python = "^8.0.32"
logmine = "^0.4.1"
astunparse = "^1.6.3"
python-json-logger = "^2.0.6"
boto3 = "^1.26.72"
validators = "^0.20.0"
python-telegram-bot = "^20.1"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
opsgenie-sdk = "^2.1.5"
psycopg2-binary = "^2.9.5"
starlette-context = "^0.3.6"
nest-asyncio = "^1.5.6"
sqlmodel = "^0.0.8"
grafana-api-sdk = "^0.1.0"
cloud-sql-python-connector = "^1.2.3"
pymysql = "^1.0.3"
google-cloud-secret-manager = "^2.16.1"
datadog-api-client = "^2.12.0"
python-jose = "^3.3.0"
jwcrypto = "^1.4.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
pre-commit-hooks = "^4.4.0"
yamllint = "^1.29.0"
black = "^23.1.0"
isort = "^5.12.0"
autopep8 = "^2.0.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
keep = "keep.cli.cli:cli"
