[project]
name = "event-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Soliton"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "cryptography (>=45.0.2,<46.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]
packages = [
    {include = "event_generator", from = "./"},
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
ruff = "^0.11.10"

